--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="s-intro__content-pretitle text-pretitle">Hello</div>
                         <h1 class="s-intro__content-title">
                         I'm Iniabasi Okorie <br>
-                        a DevOps & Cloud Security Engineer <br>
+                        a DevOps & Cloud Security an Engineer <br>
                         open to opportunities worldwide.
                         </h1>                            
 
