--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
                 <div class="column xl-6 md-12 s-footer__block s-footer__about">                    
                     <p class="attention-getter">
-                    I’m always open to discussing new projects, creative ideas, or opportunities to bring value through DevOps, Cloud Security 
+                    I am always open to discussing new projects, creative ideas, or opportunities to bring value through DevOps, Cloud Security 
                     and FinOps expertise. Feel free to reach out and let’s make something impactful together.
                     </p>               
                 </div> <!-- end section-footer__about -->
