--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                     <h5>Positive Feedback</h5>
                     <p>
                     Consistently praised by clients and colleagues for delivering high-quality solutions, 
-                    clear communication, and exceeding expectations in every project.
+                    clear communication and exceeding expectations in every project.
                     </p>
                 </div> <!-- end counter-items__item -->
 
