Added update on index html

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                     </div>
                     <h5>Happy Customers</h5>
                     <p>
-                    We take pride in delivering exceptional results that exceed client expectations 
+                    We take pride in delivering exceptional results that exceed client's expectations 
                     Our dedication to quality, security, and efficiency has earned the trust of businesses worldwide, 
                     helping them achieve their goals with confidence. 
                     </p>
